alterando as cores para um tema escuro

--- a/modulo10/template-materialui/src/index.css
+++ b/modulo10/template-materialui/src/index.css
@@ -5,9 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #121212;
+  color: #e0e0e0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  background-color: #1e1e1e;
+  color: #bb86fc;
+  padding: 2px 4px;
+  border-radius: 4px;
 }
